--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -67,12 +67,12 @@
             </div>
           <% else %>
             <li>
-              <%= link_to about_path, class: "header-link" do%>
-                <i class="fas fa-home header-icon-3"></i></br>About
+              <%= link_to about_path, class: "header-link font" do%>
+                <i class="fas fa-home header-icon-3 "></i></br>About
               <% end %>
             </li>
             <li>
-              <%= link_to items_path, class: "header-link" do %>
+              <%= link_to items_path, class: "header-link font" do %>
                 <i class="fas fa-birthday-cake header-icon-4"></i></br>商品一覧
               <% end %>
             </li>
