--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <div class="container ">
+      <div class="container back-design">
         <%= render "layouts/header" %>
         <%= yield %>
         <%= render "layouts/footer" %>  
