--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,7 @@
 }
 
 body {
-  height: 1000px;
+  
   position: relative;
 }
 
@@ -63,6 +63,7 @@ body {
 
 .container{
   width:100%;
+  padding:0;
 }
 
 
@@ -77,7 +78,7 @@ body {
 }
 
 header{
-   background-color : #fff;
+  background-color : #fff;
   background-image :
       repeating-linear-gradient(45deg,
                                 rgba(255, 255, 153, 0.62),
@@ -92,7 +93,7 @@ header{
 }
 
 footer{
-   background-color : #fff;
+  background-color : #fff;
   background-image :
       repeating-linear-gradient(45deg,
                                 rgba(255, 255, 153, 0.62),
@@ -261,7 +262,7 @@ header {
   top: 0;
   background-position: center top;
   background-size: contain;
-  height:140px;
+  height:120px;
 }
 
 .header-name {
@@ -345,3 +346,29 @@ font-family: 'Kosugi Maru', sans-serif;
   background-image: url(image5.jpg);
 } 
 
+.navbar{
+  margin-bottom:0;
+}
+
+.top-box{
+  display:flex;
+}
+
+.row{
+  margin:0;
+}
+
+input[type="text"] {
+        width: 130px;
+        height: 25px;
+    }
+
+input[type="email"] {
+        width: 130px;
+        height: 25px;
+    }
+    
+input[type="password"] {
+        width: 130px;
+        height: 25px;
+    }
