--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,19 +1,10 @@
 <body>
   <div class="container">
-    <div class="row">
+    <div class="row top-box">
       <div class="col-lg-3">
         <%= render "public/items/genre", genres: @genres %>
       </div>
       <div class="col-lg-9">
-        <div id="slide-js">
-          <div id="theTarget">
-            <div class="image1"></div>
-            <div class="image2"></div>
-            <div class="image3"></div>
-            <div class="image4"></div>
-            <div class="image5"></div>
-          </div>
-        </div>
         <p class="welcome">
           ようこそ、<span class="header-name">Nagano Cake</span> へ！<br>
           このサイトは、ケーキ販売のECサイトになります。<br>
@@ -22,20 +13,20 @@
         </p>
         <h2 class="item-head"><b>オススメ商品</b></h2>
           <div class="item-lists">
-            <% @randoms.each do |random| %>
+            <% @items.each do |item| %>
             　<div class="col-2 ">
               <div class="card-image">
                 <figure class="image">
-                  <%= link_to item_path(random) do %>
-                    <%= attachment_image_tag random, :image, :size =>'250x200' %>
+                  <%= link_to item_path(item) do %>
+                    <%= attachment_image_tag item, :image, :size =>'230x180' %>
                   <% end %>
                 </figure>
               </div>
               <div class="card-name">
-                <div class="item-name"><%= link_to random.name, item_path(random), class: "item-link" %></div>
+                <div class="item-name"><%= link_to item.name, item_path(item), class: "item-link" %></div>
               </div>
               <div class="card-price">
-                <div class="item-price">¥<%= random.price.to_s(:delimited) %></div>
+                <div class="item-price">¥<%= item.price.to_s(:delimited) %></div>
               </div>
             </div>
             <% end %>
