--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,6 +1,6 @@
 <body>
   <div class="container">
-    <div class="row">
+    <div class="row top-box">
       <div class="col-lg-3">
         <%= render "genre", genres: @genres %>
       </div>
