--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -220,6 +220,7 @@ table th {
   color: black;
   background-color: lightgray;
   padding: 10px;
+  text-align: center;
 }
 table td {
   color: black;
@@ -318,7 +319,7 @@ footer {
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Kosugi+Maru&family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&family=Shadows+Into+Light&display=swap');
 
 .font{
-  
+
 font-family: 'Kosugi Maru', sans-serif;
 
 }
@@ -343,5 +344,5 @@ font-family: 'Kosugi Maru', sans-serif;
 }
 .image5 {
   background-image: url(image5.jpg);
-} 
+}
 
