--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -245,6 +245,10 @@ table td {
   margin: auto;
 }
 
+.sold-out {
+  color: red;
+}
+
 // 注文確認
 .confirm-info {
   margin: auto;
@@ -318,7 +322,7 @@ footer {
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Kosugi+Maru&family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&family=Shadows+Into+Light&display=swap');
 
 .font{
-  
+
 font-family: 'Kosugi Maru', sans-serif;
 
 }
@@ -343,5 +347,5 @@ font-family: 'Kosugi Maru', sans-serif;
 }
 .image5 {
   background-image: url(image5.jpg);
-} 
+}
 
