--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,7 +57,7 @@ body {
 // }
 
 .welcome-message {
-  color: white;
+  color: #0066FF;
   padding: 15px 25px 0 0;
 }
 
@@ -318,7 +318,7 @@ footer {
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Kosugi+Maru&family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&family=Shadows+Into+Light&display=swap');
 
 .font{
-  
+
 font-family: 'Kosugi Maru', sans-serif;
 
 }
@@ -343,5 +343,5 @@ font-family: 'Kosugi Maru', sans-serif;
 }
 .image5 {
   background-image: url(image5.jpg);
-} 
+}
 
