--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -49,7 +49,7 @@
           <p class="cotinue-shopping"><%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %></p>
           <p class="info-button"><%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %></p>
           <% else %>
-          <h2>カート内商品はありません。</h2>
+          <h2><b>カート内商品はありません</b><i class="far fa-sad-tear"></i></h2>
           <p class="cotinue-shopping"><%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %></p>
           <% end %>
         </div>
