--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,7 +23,6 @@
 }
 
 body {
-  
   position: relative;
 }
 
@@ -111,18 +110,25 @@ footer{
 
 // 管理画面
 
-.admin-login-form{
+.new_admin{
+  display:flex;
+  justify-content:center;
+  position:relative;
+  right:55px;
+}
+
+.login-form{
   display:flex;
   justify-content:center;
 }
 
-.admin-login-title{
-  padding:30px 0px;
-}
-
-.admin-form-input{
+.form-box{
   padding:10px;
   margin:0 auto;
+}
+
+.input-form{
+  margin-top:40px;
 }
 
 .admin_login_button{
@@ -351,8 +357,14 @@ font-family: 'Kosugi Maru', sans-serif;
   margin-bottom:0;
 }
 
+// 商品一覧と詳細の位置
+
 .top-box{
   display:flex;
+}
+
+.top-box-show{
+  margin:50px;
 }
 
 .row{
