--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8">
-      <h1>About</h1>
+      <h2 class="mypage-edit"><strong>About <span class="glyphicon glyphicon-file" aria-hidden="true"></span></strong></h2>
     <p>
       ながのCakeは全国発送可能なケーキ屋さんです。</br>
       お子様からお年寄りの方までお召し上がりいただけるよう、</br>
