--- a/app/views/public/end_users/unsubscribe.html.erb
+++ b/app/views/public/end_users/unsubscribe.html.erb
@@ -13,6 +13,6 @@
         <%= f.hidden_field:is_deleted, value:1 %>
         <%= f.submit "退会する", class: "btn btn-danger yes-withdraw" %>
     <% end %>
-  <div>
+  </div>
     
 </div>
