--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,48 +9,48 @@
           <% if customer_signed_in? %>
             <li class="welcome-message">ようこそ<%= current_customer.last_name %>さん！</li>
             <li>
-              <%= link_to end_users_my_page_path(current_customer), class: "header-link" do %>
+              <%= link_to end_users_my_page_path(current_customer), class: "header-link font" do %>
                 <i class="far fa-smile header-icon-5"></i></br>マイページ
               <% end %>
             </li>
             <li>
-              <%= link_to items_path, class: "header-link" do %>
+              <%= link_to items_path, class: "header-link font" do %>
                 <i class="fas fa-birthday-cake header-icon-4"></i></br>商品一覧
               <% end %>
             </li>
             <li>
-              <%= link_to cart_items_path, class: "header-link" do %>
+              <%= link_to cart_items_path, class: "header-link font" do %>
                 <i class="fas fa-shopping-cart header-icon-3"></i></br>カート
               <% end %>
             </li>
             <li>
-              <%= link_to destroy_customer_session_path, method: :delete, class: "header-link" do %>
+              <%= link_to destroy_customer_session_path, method: :delete, class: "header-link font" do %>
                 <i class="fas fa-sign-out-alt header-icon-5"></i></br>ログアウト
               <% end %>
             </li>
           <% elsif admin_signed_in? %>
             <li>
-              <%= link_to admin_items_path, class: "header-link" do %>
+              <%= link_to admin_items_path, class: "header-link font" do %>
                 <i class="fas fa-birthday-cake header-icon-4"></i></br>商品一覧
               <% end %>
             </li>
             <li>
-              <%= link_to admin_end_users_path, class: "header-link" do %>
+              <%= link_to admin_end_users_path, class: "header-link font" do %>
                 <i class="fas fa-user-friends header-icon-4"></i></br>会員一覧
               <% end %>
             </li>
             <li>
-              <%= link_to admin_orders_path, class: "header-link" do %>
+              <%= link_to admin_orders_path, class: "header-link font" do %>
                 <i class="fas fa-money-check-alt header-icon-6"></i></br>注文履歴一覧
               <% end %>
             </li>
             <li>
-              <%= link_to admin_genres_path, class: "header-link" do %>
+              <%= link_to admin_genres_path, class: "header-link font" do %>
                 <i class="fas fa-gift header-icon-6"></i></br>ジャンル一覧
               <% end %>
             </li>
             <li>
-              <%= link_to destroy_admin_session_path, method: :delete, class: "header-link" do %>
+              <%= link_to destroy_admin_session_path, method: :delete, class: "header-link font" do %>
                 <i class="fas fa-sign-out-alt header-icon-5"></i></br>ログアウト
               <% end %>
             </li>
@@ -77,12 +77,12 @@
               <% end %>
             </li>
             <li>
-              <%= link_to new_customer_registration_path, class: "header-link" do %>
+              <%= link_to new_customer_registration_path, class: "header-link font" do %>
                 <i class="fas fa-pen-alt header-icon-4"></i></br>新規登録
               <% end %>
             </li>
             <li>
-              <%= link_to new_customer_session_path, class: "header-link" do %>
+              <%= link_to new_customer_session_path, class: "header-link font" do %>
                 <i class="fas fa-sign-in-alt header-icon-4"></i></br>ログイン
               <% end %>
             </li>
