--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -1,3 +1,9 @@
-<h2>会員一覧</h2>
-<%= render "table", end_users: @end_users %>
-<%= paginate @end_users %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9">
+      <h2><b>会員一覧</b></h2>
+      <%= render "table", end_users: @end_users %>
+      <%= paginate @end_users %>
+    </div>
+  </div>
+</div>
