--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,11 +1,16 @@
 <div class="container">
-  <h1 class="item-header">商品編集</h1>
-  <%= render "error", item: @item %>
+  <div class="row">
+    <div class="col-lg-9">
+      <h1 class="item-header"><b>商品編集</b></h1>
+      <%= render "error", item: @item %>
 
-    <div class="row">
-      <%= form_with model:@item, url:admin_item_path(@item), local:true do |f| %>
-      <%= render "form", f: f, item: @item, edit_flag: true %>
-      <% end %>
+        <div class="row">
+          <%= form_with model:@item, url:admin_item_path(@item), local:true do |f| %>
+          <%= render "form", f: f, item: @item, edit_flag: true %>
+          <% end %>
+        </div>
     </div>
+  </div>
 </div>
+
 
