--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,10 +1,14 @@
 <div class="container">
-  <h1 class="item-header">商品一覧</h1>
+  <div class="row">
+    <div class="col-lg-9">
+      <h1 class="item-header"><b>商品一覧</b></h1>
 
-  <%= link_to new_admin_item_path do %>
-    <i class="fas fa-plus-circle fa-3x new-botton"></i>
-  <% end %>
+      <%= link_to new_admin_item_path do %>
+        <i class="fas fa-plus-circle fa-3x new-botton"></i>
+      <% end %>
 
-  <%= render "table", items: @items %>
-  <%= paginate @items %>
+      <%= render "table", items: @items %>
+      <%= paginate @items %>
+    </div>
+  </div>
 </div>
