--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,2 +1,8 @@
-<h1><b>注文履歴一覧</b></h1>
-<%= render "table", orders: @orders %>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-9">
+      <h1><b>注文履歴一覧</b></h1>
+      <%= render "table", orders: @orders %>
+    </div>
+  </div>
+</div>
