--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,7 @@ body {
 }
 
 .welcome {
+  width: 800px;
   text-align: center;
   font-size: 20px;
   margin-top: 20px;
@@ -335,6 +336,7 @@ font-family: 'Kosugi Maru', sans-serif;
 #slide-js {
   height: 420px;
   width: 800px;
+  margin-top: 20px;
 }
 
 .image1 {
@@ -380,7 +382,7 @@ input[type="email"] {
         width: 130px;
         height: 25px;
     }
-    
+
 input[type="password"] {
         width: 130px;
         height: 25px;
