--- a/app/views/public/end_users/show.html.erb
+++ b/app/views/public/end_users/show.html.erb
@@ -1,47 +1,49 @@
-<div class="row">
-  <h2 class="mypage"><b>マイページ <span class="glyphicon glyphicon-user" aria-hidden="true"></span></b></h2>
-  <p><strong>登録情報</strong>
-    <%= link_to '編集する', edit_end_user_path(current_customer), class: "btn btn-primary" %>
-    <%= link_to 'パスワードを変更する', edit_customer_password_path(current_customer), class: "btn btn-primary" %>
-  </p>
-  
-  <table class="mypage-form">
-    <tr>
-      <th>氏名</th>
-      <td class="mypage-form-box"><%= current_customer.last_name %>　<%= current_customer.first_name %></td>
-    </tr>
-    <tr>
-      <th>カナ</th>
-      <td class="mypage-form-box"><%= current_customer.last_name_kana %>　<%= current_customer.first_name_kana %></td>
-    </tr>
-    <tr>
-      <th>郵便番号</th>
-      <td class="mypage-form-box"><%= current_customer.postal_code %></td>
-    </tr>
-    <tr>
-      <th>住所</th>
-      <td class="mypage-form-box"><%= current_customer.address %></td>
-    </tr>
-    <tr>
-      <th>電話番号</th>
-      <td class="mypage-form-box"><%= current_customer.telphone_number %></td>
-    </tr>
-    <tr>
-      <th>メールアドレス</th>
-      <td class="mypage-form-box"><%= current_customer.email %></td>
-    </tr>
-  </table>
-  
-<div class="mypage-bottom">
-  <div class="mypage-bottom-box">
-    <p><strong>配送先</strong></p>
-    <p><strong>注文履歴</strong></p>
-  </div>
-  <div>
-    <p><%= link_to '一覧を見る', addresses_path(current_customer), class: "btn btn-primary"  %></p>
-    <p><%= link_to '一覧を見る', orders_path(current_customer), class: "btn btn-primary" %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <h2 class="mypage"><b>マイページ <span class="glyphicon glyphicon-user" aria-hidden="true"></span></b></h2>
+      <p><strong>登録情報</strong>
+        <%= link_to '編集する', edit_end_user_path(current_customer), class: "btn btn-primary" %>
+        <%= link_to 'パスワードを変更する', edit_customer_password_path(current_customer), class: "btn btn-primary" %>
+      </p>
+
+      <table class="mypage-form">
+        <tr>
+          <th>氏名</th>
+          <td class="mypage-form-box"><%= current_customer.last_name %>　<%= current_customer.first_name %></td>
+        </tr>
+        <tr>
+          <th>カナ</th>
+          <td class="mypage-form-box"><%= current_customer.last_name_kana %>　<%= current_customer.first_name_kana %></td>
+        </tr>
+        <tr>
+          <th>郵便番号</th>
+          <td class="mypage-form-box"><%= current_customer.postal_code %></td>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <td class="mypage-form-box"><%= current_customer.address %></td>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <td class="mypage-form-box"><%= current_customer.telphone_number %></td>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <td class="mypage-form-box"><%= current_customer.email %></td>
+        </tr>
+      </table>
+
+      <div class="mypage-bottom">
+        <div class="mypage-bottom-box">
+          <p><strong>配送先</strong></p>
+          <p><strong>注文履歴</strong></p>
+        </div>
+        <div>
+          <p><%= link_to '一覧を見る', addresses_path(current_customer), class: "btn btn-primary"  %></p>
+          <p><%= link_to '一覧を見る', orders_path(current_customer), class: "btn btn-primary" %></p>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
-
-</div>
-
