--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -277,7 +277,7 @@ table td {
 
 .thanks_message {
   text-align: center;
-  margin-top: 200px;
+  margin: 200px 0;
 }
 
 // ヘッダー
@@ -479,4 +479,8 @@ display:flex;
 
 .yes-withdraw{
   margin-left:20px;
+}
+
+.admin-top{
+  margin:50px 0px;
 }
