--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,4 +1,5 @@
-<h3>管理者画面</h2>
-<h2>本日の注文件数 <%= @order %>件</h2>
-
+<div class="admin-top">
+  <h3>管理者画面</h2>
+  <h2>本日の注文件数 <%= @order %>件</h2>
+</div>
 
