--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,10 +27,12 @@ body {
 }
 
 .wrapper{
-  min-height: 100vh;
   position: relative;
   padding-bottom: 120px;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .item-lists {
@@ -62,7 +64,8 @@ body {
 }
 
 .container{
-  width:100%;
+  width: 100%;
+  height: 1000px;
   padding:0;
 }
 
@@ -327,15 +330,20 @@ footer {
   width: 100%;
   height: 120px;
   text-align: center;
-  padding: 50px 0;
-  background-position: center bottom;
-  background-size: contain;
-  position: absolute;
-  bottom: 0;
+  margin-top: auto;
+  padding: 20px 0;
+  display: flex;
 }
 
 .footer-text {
   color: #0066FF;
+  padding: 5px;
+}
+
+.footer-icon {
+  display: inline;
+  margin: 10px;
+  font-size: 15px;
 }
 
 
@@ -403,7 +411,7 @@ input[type="password"] {
         width: 130px;
         height: 25px;
     }
-    
+
 // マイページ
 
 .mypage{
